[gd_scene load_steps=22 format=1]

[ext_resource path="res://game/screens/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://game/screens/ScreenControl.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/items/gameplay/Game.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/textures/lowrezjam.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/ui.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/5x5.tres" type="DynamicFont" id=6]

[sub_resource type="Animation" id=1]

resource/name = "diff"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ui/Menus/Title:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ui/Menus/Main:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ui/Menus/Difficulty:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("ui/Menus/Difficulty/Buttons/Easy")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "grab_focus"
} ]
}

[sub_resource type="Animation" id=2]

resource/name = "start"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ui/Menus/Title:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ui/Menus/Main:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ui/Menus/Difficulty:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("ui/Menus/Main/Play")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "grab_focus"
} ]
}

[sub_resource type="AtlasTexture" id=3]

atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 16 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=4]

atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 9 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=5]

atlas = ExtResource( 5 )
region = Rect2( 0, 18, 16, 9 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=6]

atlas = ExtResource( 5 )
region = Rect2( 0, 9, 16, 9 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=7]

atlas = ExtResource( 5 )
region = Rect2( 0, 27, 16, 9 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=8]

atlas = ExtResource( 5 )
region = Rect2( 0, 45, 16, 9 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=9]

atlas = ExtResource( 5 )
region = Rect2( 0, 36, 16, 9 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=10]

atlas = ExtResource( 5 )
region = Rect2( 25, 18, 39, 9 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=11]

atlas = ExtResource( 5 )
region = Rect2( 25, 27, 39, 9 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=12]

atlas = ExtResource( 5 )
region = Rect2( 25, 0, 39, 9 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=13]

atlas = ExtResource( 5 )
region = Rect2( 25, 9, 39, 9 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=14]

atlas = ExtResource( 5 )
region = Rect2( 25, 36, 39, 9 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=15]

atlas = ExtResource( 5 )
region = Rect2( 25, 45, 39, 9 )
margin = Rect2( 0, 0, 0, 0 )

[node name="MainMenu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="ScreenControl" parent="." instance=ExtResource( 2 )]

next_scene = "res://game/screens/Level.tscn"

[node name="MenuStack" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/diff = SubResource( 1 )
anims/start = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "start"

[node name="Game" parent="." instance=ExtResource( 3 )]

editor/display_folded = true

[node name="Hands" parent="Game"]

visibility/visible = false

[node name="AnimationPlayer" parent="Game"]

autoplay = ""

[node name="ui" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Menus" type="Control" parent="ui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Title" type="TextureFrame" parent="ui/Menus"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 5.0
margin/right = 48.0
margin/bottom = 21.0
texture = SubResource( 3 )
stretch_mode = 0

[node name="Main" type="Control" parent="ui/Menus"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Play" type="TextureButton" parent="ui/Menus/Main"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 43.0
margin/right = 40.0
margin/bottom = 52.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = SubResource( 4 )
textures/pressed = SubResource( 5 )
textures/hover = SubResource( 6 )
textures/focused = SubResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Quit" type="TextureButton" parent="ui/Menus/Main"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 53.0
margin/right = 40.0
margin/bottom = 62.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = SubResource( 7 )
textures/pressed = SubResource( 8 )
textures/hover = SubResource( 9 )
textures/focused = SubResource( 9 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Difficulty" type="Control" parent="ui/Menus"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Overlay" type="ColorFrame" parent="ui/Menus/Difficulty"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 7.0
margin/right = 64.0
margin/bottom = 16.0
color = Color( 1, 1, 1, 1 )

[node name="Diff" type="Label" parent="ui/Menus/Difficulty"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 9.0
margin/right = 62.0
margin/bottom = 16.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.666667, 0.0745098, 0.219608, 1 )
text = "Difficulty"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Buttons" type="VBoxContainer" parent="ui/Menus/Difficulty"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 13.0
margin/top = 24.0
margin/right = 52.0
margin/bottom = 53.0
custom_constants/separation = 1
alignment = 0
__meta__ = {
"_edit_group_": true
}

[node name="Easy" type="TextureButton" parent="ui/Menus/Difficulty/Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 39.0
margin/bottom = 9.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = SubResource( 10 )
textures/hover = SubResource( 11 )
textures/focused = SubResource( 11 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Normal" type="TextureButton" parent="ui/Menus/Difficulty/Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 10.0
margin/right = 39.0
margin/bottom = 19.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = SubResource( 12 )
textures/hover = SubResource( 13 )
textures/focused = SubResource( 13 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Hard" type="TextureButton" parent="ui/Menus/Difficulty/Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 20.0
margin/right = 39.0
margin/bottom = 29.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = SubResource( 14 )
textures/hover = SubResource( 15 )
textures/focused = SubResource( 15 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="animation_started" from="MenuStack" to="." method="_on_MenuStack_animation_started"]

[connection signal="pressed" from="ui/Menus/Main/Play" to="." method="_on_Play_pressed"]

[connection signal="pressed" from="ui/Menus/Main/Quit" to="." method="_on_Quit_pressed"]


[editable path="Game"]
